set up server to the game

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Shooting Game</title>
+	<link rel="alternate" href="/static/style.css">
 </head>
 <body>
-<script src="client.js"></script>
 <canvas id='screen'></canvas>
+<script src="game.js"></script>
 </body>
 </html>
