learn how game logic works

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <canvas id='screen'></canvas>
-<script src="game.js"></script>
+<script src="/static/game.js"></script>
 </body>
 </html>
