add win or lose feature

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <canvas id="screen"></canvas>
+<div id='inst'>Press left and right arrow keys to move. Spacebar to shoot and R to restart game</div>
+<div id='status'>Win Status: </div>
 </body>
 <script src="../app/game.js"></script>
 </html>
