resolve variables that are out of scope

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,5 @@
 <div id='inst'>Press left and right arrow keys to move. Spacebar to shoot and R to restart game</div>
 <div id='status'>Win Status: </div>
 </body>
-<script src="../public/bundle.js"></script>
+<script src="/bundle.js"></script>
 </html>
