--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <audio id="invader-shoots" src="http://bit.ly/1W6dVEe" type="audio/ogg"></audio>
 <audio id="player-explodes" src="http://bit.ly/1RoLqek" type="audio/ogg"></audio>
 </body>
-<script src="/bundle.js"></script>
+<script src="public/bundle.js"></script>
 </html>
