Basic test with ship sprite (slow)

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
 <audio id="invader-shoots" src="http://bit.ly/1W6dVEe" type="audio/ogg"></audio>
 <audio id="player-explodes" src="http://bit.ly/1RoLqek" type="audio/ogg"></audio>
 </body>
+<img id="ship" src="ship.png"></img>
 <script src="bundle.js"></script>
 </html>
