--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<canvas id="screen"></canvas>
+<canvas id="screen" moz-opaque></canvas>
 <div id='inst'>Press Left and Right Arrow keys to move. Spacebar to shoot and R to restart game</div>
 <div id='status'> </div>
 <audio id="player-shoots" src="http://bit.ly/1PH8CWT" type="audio/ogg"></audio>
