--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
 <body>
     <canvas id="screen" moz-opaque></canvas>
     <div id='inst'>Press Left and Right Arrow keys to move. Spacebar to shoot and R to restart game</div>
-    <div id='status'> </div>
+    <div id='status'></div>
     <audio id="player-shoots" src="http://bit.ly/1PH8CWT" type="audio/ogg"></audio>
     <audio id="invader-explodes" src="http://bit.ly/1W4UKW2" type="audio/ogg"></audio>
     <audio id="invader-shoots" src="http://bit.ly/1W6dVEe" type="audio/ogg"></audio>
     <audio id="player-explodes" src="http://bit.ly/1RoLqek" type="audio/ogg"></audio>
+    <image id="player" src="images/smallship.png"></image>
+    <image id="invader" src="images/smallinvader.png"></image>
 </body>
 <script src="bundle.js"></script>
 
