ensure all URLS are served through HTTPS

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <canvas id="screen"></canvas>
     <div id='inst'>Press Left and Right Arrow keys to move. Spacebar to shoot and R to restart game</div>
     <div id='status'> </div>
-    <audio id="player-shoots" src="http://bit.ly/1PH8CWT" type="audio/ogg"></audio>
-    <audio id="invader-explodes" src="http://bit.ly/1W4UKW2" type="audio/ogg"></audio>
-    <audio id="invader-shoots" src="http://bit.ly/1W6dVEe" type="audio/ogg"></audio>
-    <audio id="player-explodes" src="http://bit.ly/1RoLqek" type="audio/ogg"></audio>
+    <audio id="player-shoots" src="https://bit.ly/1PH8CWT" type="audio/ogg"></audio>
+    <audio id="invader-explodes" src="https://bit.ly/1W4UKW2" type="audio/ogg"></audio>
+    <audio id="invader-shoots" src="https://bit.ly/1W6dVEe" type="audio/ogg"></audio>
+    <audio id="player-explodes" src="https://bit.ly/1RoLqek" type="audio/ogg"></audio>
 </body>
 <script src="public/bundle.js"></script>
 
